--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "facebook/php-sdk-v4": "~4.1@dev"
+        "facebook/php-sdk-v4": "~4.1.0@dev"
     },
     "require-dev": {
-        "mockery/mockery": "dev-master@dev"
+        "mockery/mockery": "~0.9"
     },
     "autoload": {
         "psr-4": {
