--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "facebook/php-sdk-v4": "~4.1.0@dev"
     },
     "require-dev": {
+        "phpunit/phpunit": "~4.0",
         "mockery/mockery": "~0.9"
     },
     "autoload": {
