--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
 before_script:
@@ -15,5 +16,5 @@ script:
 
 matrix:
   allow_failures:
-    - php: hhvm
+    - php: 7.0
   fast_finish: true
